--- a/Bulky/BulkyWeb/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Bulky/BulkyWeb/Areas/Identity/Pages/Account/Register.cshtml
@@ -70,8 +70,8 @@
                         <label asp-for="Input.Role" class="text-muted ms-2"></label>
                         @* <span asp-validation-for="Product.CategoryId" class="text-danger"></span> *@
                     </div>
-                    <div class="form-floating py-2 col-md-6">
-                        <select asp-for="Input.CompanyId" asp-items="@Model.Input.CompanyList" class="form-select border-0 shadow">
+                    <div class="form-floating py-2 col-md-6" style="display:none" id="Div_CompanyId">
+                        <select asp-for="Input.CompanyId"  asp-items="@Model.Input.CompanyList" class="form-select border-0 shadow">
                             <option disabled selected>--Select Company--</option>
                         </select>
                         <label asp-for="Input.CompanyId" class="text-muted ms-2"></label> 
@@ -92,10 +92,8 @@
                         {
                             <div>
                                 <p>
-                                    There are no external authentication services configured. See this <a href="https://go.microsoft.com/fwlink/?LinkID=532715">
-                                        article
-                                        about setting up this ASP.NET application to support logging in via external services
-                                    </a>.
+                                    There are no external authentication services configured. See this 
+                                    <a href="https://go.microsoft.com/fwlink/?LinkID=532715"> article about setting up this ASP.NET application to support logging in via external services</a>.
                                 </p>
                             </div>
                         }
@@ -122,4 +120,17 @@
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
+    <script>
+        $(document).ready(function () {
+            $('#Input_Role').change(function() {
+                var selection = $('#Input_Role Option:Selected').text();
+                if (selection == 'Company') {
+                    $('#Div_CompanyId').show()
+                }
+                else {
+                    $('#Div_CompanyId').hide()
+                }
+            })
+        })
+    </script>
 }
