--- a/Bulky/BulkyWeb/Views/Shared/_Layout.cshtml
+++ b/Bulky/BulkyWeb/Views/Shared/_Layout.cshtml
@@ -45,7 +45,7 @@
                         }
                     </ul>
                     <a class="nav-link" asp-area="Customer" asp-controller="Cart" asp-action="Index">
-                        <i class="bi bi-bag"></i> &nbsp; 0
+                        <i class="bi bi-bag"></i> &nbsp;
                     </a>
                     <partial name="_LoginPartial" />
                 </div>
