--- a/Bulky/BulkyWeb/Areas/Customer/Views/Cart/Summary.cshtml
+++ b/Bulky/BulkyWeb/Areas/Customer/Views/Cart/Summary.cshtml
@@ -25,52 +25,52 @@
 									<span class="text-info">Shipping Details:</span>
 								</h4>
 							</div>
-							<div class="row my-1">
+							<div class="row my-1 py-2">
 								<div class="col-3">
 									<label>Name</label>
 								</div>
 								<div class="col-9">
-									<input class="form-control" />
+									<input class="form-control border-0 shadow" />
 								</div>
 							</div>
-							<div class="row my-1">
+							<div class="row my-1 py-2">
 								<div class="col-3">
 									<label>Phone</label>
 								</div>
 								<div class="col-9">
-									<input class="form-control" />
+									<input class="form-control border-0 shadow" />
 								</div>
 							</div>
-							<div class="row my-1">
+							<div class="row my-1 py-2">
 								<div class="col-3">
 									<label>Street Address</label>
 								</div>
 								<div class="col-9">
-									<input class="form-control" />
+									<input class="form-control border-0 shadow" />
 								</div>
 							</div>
-							<div class="row my-1">
+							<div class="row my-1 py-2">
 								<div class="col-3">
 									<label>City</label>
 								</div>
 								<div class="col-9">
-									<input class="form-control" />
+									<input class="form-control border-0 shadow" />
 								</div>
 							</div>
-							<div class="row my-1">
+							<div class="row my-1 py-2">
 								<div class="col-3">
 									<label>State</label>
 								</div>
 								<div class="col-9">
-									<input class="form-control" />
+									<input class="form-control border-0 shadow" />
 								</div>
 							</div>
-							<div class="row my-1">
+							<div class="row my-1 py-2">
 								<div class="col-3">
 									<label>Postal Code</label>
 								</div>
 								<div class="col-9">
-									<input class="form-control" />
+									<input class="form-control border-0 shadow" />
 								</div>
 							</div>
 						</div>
