--- a/Bulky/BulkyWeb/Views/Shared/_Layout.cshtml
+++ b/Bulky/BulkyWeb/Views/Shared/_Layout.cshtml
@@ -40,6 +40,8 @@
                                     <li><a class="dropdown-item" asp-area="Admin" asp-controller="Product" asp-action="Index">Products</a></li>
                                     <li><hr class="dropdown-divider" /></li>
                                     <li><a class="dropdown-item" asp-area="Admin" asp-controller="Company" asp-action="Index">Companies</a></li>
+                                    <li><hr class="dropdown-divider" /></li>
+                                    <li><a class="dropdown-item" asp-area="Admin" asp-controller="Order" asp-action="Index">Orders</a></li>
                                 </ul>
                             </li>
                         }
