--- a/Bulky/BulkyWeb/Views/Shared/_Layout.cshtml
+++ b/Bulky/BulkyWeb/Views/Shared/_Layout.cshtml
@@ -41,14 +41,19 @@
                                     <li><hr class="dropdown-divider" /></li>
                                     <li><a class="dropdown-item" asp-area="Admin" asp-controller="Company" asp-action="Index">Companies</a></li>
                                     <li><hr class="dropdown-divider" /></li>
-                                    <li><a class="dropdown-item" asp-area="Admin" asp-controller="Order" asp-action="Index">Orders</a></li>
+                                    @* <li><a class="dropdown-item" asp-area="Admin" asp-controller="Order" asp-action="Index">Orders</a></li> *@
                                 </ul>
                             </li>
-                        }
+                        } 
                     </ul>
                     <a class="nav-link" asp-area="Customer" asp-controller="Cart" asp-action="Index">
                         <i class="bi bi-cart"></i> &nbsp;
                     </a>
+                    <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" asp-area="Admin" asp-controller="Order" asp-action="Index">Orders</a>
+                    </li>
+                    </ul>
                     <partial name="_LoginPartial" />
                 </div>
             </div>
