--- a/Bulky/BulkyWeb/Areas/Admin/Views/Order/Details.cshtml
+++ b/Bulky/BulkyWeb/Areas/Admin/Views/Order/Details.cshtml
@@ -16,6 +16,7 @@
             </div>
             <div class="card-body">
                 <div class="container rounded p-2">
+                    <input asp-for="OrderHeader.Id" type="text" hidden class="form-control border-0 shadow" />
                     <div class="row">
                         <div class="col-12 col-lg-6 pb-4">
                             <div class="row">
@@ -204,7 +205,7 @@
 
                              @if (User.IsInRole(SD.Role_Admin) || User.IsInRole(SD.Role_Employee))
                             {
-                                <input type="submit" class="btn btn-warning form-control my-1" value="Update Order Details" />
+                                <button asp-action="UpdateOrderDetail" type="submit" class="btn btn-warning form-control my-1">Update Order Details</button>
                             }
 
                         </div>
