--- a/Bulky/BulkyWeb/Areas/Admin/Views/Order/Details.cshtml
+++ b/Bulky/BulkyWeb/Areas/Admin/Views/Order/Details.cshtml
@@ -258,7 +258,7 @@
                                 }
                                 @if (Model.OrderHeader.OrderStatus == SD.StatusInProcess)
                                 {
-                                    <button type="submit" onClick="return validateInput()" class="btn btn-primary form-control my-1">Ship Order</button>
+                                    <button asp-action="ShipOrder" type="submit" onClick="return validateInput()" class="btn btn-primary form-control my-1">Ship Order</button>
                                 }
                                 @if (Model.OrderHeader.OrderStatus != SD.StatusRefunded &&
                                 Model.OrderHeader.OrderStatus != SD.StatusCancelled &&
