--- a/Bulky/BulkyWeb/Areas/Admin/Views/Order/PaymentConfirmation.cshtml
+++ b/Bulky/BulkyWeb/Areas/Admin/Views/Order/PaymentConfirmation.cshtml
@@ -10,6 +10,7 @@
     <div class="col-12 text-center" style="color: maroon">
         <br />
         Your order payment has been completed successfully.
+        @* <a asp-area="Admin" asp-controller="Order" asp-action="Details" asp-route="@Model" class="btn btn-info">Back to Order Details</a> *@
         <br />
     </div>
 </div>
