--- a/Bulky/BulkyWeb/Views/Shared/_Layout.cshtml
+++ b/Bulky/BulkyWeb/Views/Shared/_Layout.cshtml
@@ -1,4 +1,6 @@
-﻿﻿
+﻿@using Microsoft.AspNetCore.Http
+@inject IHttpContextAccessor HttpContextAccessor
+﻿
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -45,14 +47,29 @@
                                 </ul>
                             </li>
                         } 
-                    </ul>
-                    <a class="nav-link" asp-area="Customer" asp-controller="Cart" asp-action="Index">
-                        <i class="bi bi-cart"></i> &nbsp;
-                    </a>
+                    </ul>                    
                     <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" asp-area="Admin" asp-controller="Order" asp-action="Index">Orders</a>
-                    </li>
+                        @if(HttpContextAccessor.HttpContext.Session.GetInt32(SD.SessionCart) != null)
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link" asp-area="Customer" asp-controller="Cart" asp-action="Index">
+                                    <i class="bi bi-cart"></i> &nbsp;
+                                    (@HttpContextAccessor.HttpContext.Session.GetInt32(SD.SessionCart))
+                                </a>
+                            </li>
+                        }
+                        else
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link" asp-area="Customer" asp-controller="Cart" asp-action="Index">
+                                    <i class="bi bi-cart"></i> &nbsp;
+                                    (0)
+                                </a>
+                            </li>
+                        }                        
+                        <li class="nav-item">
+                            <a class="nav-link" asp-area="Admin" asp-controller="Order" asp-action="Index">Orders</a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
