--- a/Bulky/BulkyWeb/Areas/Identity/Pages/Account/ExternalLogin.cshtml
+++ b/Bulky/BulkyWeb/Areas/Identity/Pages/Account/ExternalLogin.cshtml
@@ -15,15 +15,55 @@
 </p>
 
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-12">
         <form asp-page-handler="Confirmation" asp-route-returnUrl="@Model.ReturnUrl" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-floating">
-                <input asp-for="Input.Email" class="form-control" autocomplete="email" />
-                <label asp-for="Input.Email" class="form-label"></label>
+            <div class="form-floating py-2">
+                <input asp-for="Input.Email" class="form-control border-0 shadow" autocomplete="email" />
+                <label asp-for="Input.Email" class="text-muted"></label>
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
-            <button type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
+            <div class="row col-md-12">
+                <div class="form-floating py-2 col-md-6">
+                    <input asp-for="Input.Name" class="form-control border-0 shadow" />
+                    <label asp-for="Input.Name" class="text-muted"></label>
+                    <span asp-validation-for="Input.Name" class="text-danger"></span>
+                </div>
+                <div class="form-floating py-2 col-md-6">
+                    <input asp-for="Input.PhoneNumber" class="form-control border-0 shadow" />
+                    <label asp-for="Input.PhoneNumber" class="text-muted"></label>
+                    <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
+                </div>
+            </div>
+            <div class="row col-md-12">
+                <div class="form-floating py-2 col-md-6">
+                    <input asp-for="Input.StreetAddress" class="form-control border-0 shadow" />
+                    <label asp-for="Input.StreetAddress" class="text-muted"></label>
+                    <span asp-validation-for="Input.StreetAddress" class="text-danger"></span>
+                </div>
+                <div class="form-floating py-2 col-md-6">
+                    <input asp-for="Input.City" class="form-control border-0 shadow" />
+                    <label asp-for="Input.City" class="text-muted"></label>
+                    <span asp-validation-for="Input.City" class="text-danger"></span>
+                </div>
+            </div>
+            <div class="row col-md-12">
+                <div class="form-floating py-2 col-md-6">
+                    <input asp-for="Input.State" class="form-control border-0 shadow" />
+                    <label asp-for="Input.State" class="text-muted"></label>
+                    <span asp-validation-for="Input.State" class="text-danger"></span>
+                </div>
+                <div class="form-floating py-2 col-md-6">
+                    <input asp-for="Input.PostalCode" class="form-control border-0 shadow" />
+                    <label asp-for="Input.PostalCode" class="text-muted"></label>
+                    <span asp-validation-for="Input.PostalCode" class="text-danger"></span>
+                </div>
+            </div>  
+            <div class="row pt-2">
+                <div class="p-3 text-center">
+                    <button type="submit" class="w-50 btn btn-success">Register</button>
+                </div>
+            </div>
         </form>
     </div>
 </div>
