--- a/Bulky/BulkyWeb/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Bulky/BulkyWeb/Areas/Identity/Pages/Account/Register.cshtml
@@ -77,7 +77,7 @@
                         <label asp-for="Input.CompanyId" class="text-muted ms-2"></label> 
                     </div>
                     <div class="row pt-2">
-                        <div>
+                        <div class="p-3 text-center">
                             <button id="registerSubmit" type="submit" class="w-50 btn btn-success">Create</button>
                         </div>
                     </div>
