--- a/Bulky/BulkyWeb/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Bulky/BulkyWeb/Areas/Identity/Pages/Account/Register.cshtml
@@ -8,7 +8,15 @@
     <div class="card-header bg-opacity-50 bg-primary bg-gradient ml-0 py-4">
            <div class="row">
                 <div class="col-12 text-center">
+                @if (User.IsInRole(SD.Role_Admin))
+                {
+                    <h2 class="py-2 text-white">Admin Portal - Register</h2>
+
+                }
+                else
+                {
                     <h2 class="py-2 text-white">Register</h2>
+                }
                 </div>
            </div>
     </div>
@@ -63,13 +71,16 @@
                         <label asp-for="Input.PostalCode" class="text-muted ms-2"></label>
                         <span asp-validation-for="Input.PostalCode" class="text-danger"></span>
                     </div>
-                    <div class="form-floating py-2 col-md-6">
-                        <select asp-for="Input.Role" asp-items="@Model.Input.RoleList" class="form-select border-0 shadow">
-                            <option disabled selected>--Select Role--</option>
-                        </select>
-                        <label asp-for="Input.Role" class="text-muted ms-2"></label>
-                        @* <span asp-validation-for="Product.CategoryId" class="text-danger"></span> *@
-                    </div>
+                    @if (User.IsInRole(SD.Role_Admin))
+                    {
+                        <div class="form-floating py-2 col-md-6">
+                            <select asp-for="Input.Role" asp-items="@Model.Input.RoleList" class="form-select border-0 shadow">
+                                <option disabled selected>--Select Role--</option>
+                            </select>
+                            <label asp-for="Input.Role" class="text-muted ms-2"></label>
+                            @* <span asp-validation-for="Product.CategoryId" class="text-danger"></span> *@
+                        </div>
+                    }                    
                     <div class="form-floating py-2 col-md-6" style="display:none" id="Div_CompanyId">
                         <select asp-for="Input.CompanyId"  asp-items="@Model.Input.CompanyList" class="form-select border-0 shadow">
                             <option disabled selected>--Select Company--</option>
@@ -83,36 +94,39 @@
                     </div>
                 </form>
             </div>
-            <div class="col-md-12">
-                <section>
-                    <p class="divider-text d-flex pt-3">Or</p>
-                    <h4>Use another service to register.</h4>  
-                    @{
-                        if ((Model.ExternalLogins?.Count ?? 0) == 0)
-                        {
-                            <div>
-                                <p>
-                                    There are no external authentication services configured. See this 
-                                    <a href="https://go.microsoft.com/fwlink/?LinkID=532715"> article about setting up this ASP.NET application to support logging in via external services</a>.
-                                </p>
-                            </div>
-                        }
-                        else
-                        {
-                            <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
+            @if (!User.IsInRole(SD.Role_Admin))
+            {
+                <div class="col-md-12">
+                    <section>
+                        <p class="divider-text d-flex pt-3">Or</p>
+                        <h4>Use another service to register.</h4>
+                        @{
+                            if ((Model.ExternalLogins?.Count ?? 0) == 0)
+                            {
                                 <div>
                                     <p>
-                                        @foreach (var provider in Model.ExternalLogins!)
-                                        {
-                                            <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
-                                        }
+                                        There are no external authentication services configured. See this
+                                        <a href="https://go.microsoft.com/fwlink/?LinkID=532715"> article about setting up this ASP.NET application to support logging in via external services</a>.
                                     </p>
                                 </div>
-                            </form>
+                            }
+                            else
+                            {
+                                <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
+                                    <div>
+                                        <p>
+                                            @foreach (var provider in Model.ExternalLogins!)
+                                            {
+                                                <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
+                                            }
+                                        </p>
+                                    </div>
+                                </form>
+                            }
                         }
-                    }
-                </section>
-            </div>
+                    </section>
+                </div>
+            }
         </div>
     </div>
 </div>
